corrected typo in ROB1 notes

--- a/Robotics 1/LatexSourceFile/Robotics1.tex
+++ b/Robotics 1/LatexSourceFile/Robotics1.tex
@@ -972,7 +972,7 @@ the components of ${}^AR_B$ are the direction cosines of the axes of $RF_B$ with
     (\mathbf x_A,\mathbf y_A,\mathbf z_A)\\
     (\mathbf x_B,\mathbf y_B,\mathbf z_B)
 \end{align}
-the matrix ${}^AR_B$ are the following\begin{equation}
+the matrix ${}^AR_B$ is the following\begin{equation}
     {}^AR_B=\begin{pmatrix}
         \mathbf x^T_A\mathbf x_B&\mathbf x^T_A\mathbf y_B&\mathbf x^T_A\mathbf z_B\\ \\
         \mathbf y^T_A\mathbf x_B&\mathbf y^T_A\mathbf y_B&\mathbf y^T_A\mathbf z_B\\ \\
@@ -1581,7 +1581,7 @@ we denote this \textbf{homogeneous transformation} ${}^AT_B$\begin{equation}
 (applied vector starting from the origin of the frame)
 from one frame to another frame.
 \item It is a roto-translation operator on vectors in the three dimensional space. 
-\item It is invertible $({}^AT_B)^{-1}={}^BT_B$
+\item It is invertible $({}^AT_B)^{-1}={}^BT_A$
 \item and can be composed\begin{equation}
     {}^AT_B{}^BT_C={}^AT_C.
 \end{equation}
